--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>MomBoard</title>
+    <title>MBoard</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" href="../MomBoard.png">
     <link rel="apple-touch-icon" href="../MomBoard.png" sizes="512x512">
