modifying MomBoard -> MBoard

--- a/public/board.html
+++ b/public/board.html
@@ -102,7 +102,7 @@
   </head>
   <body>
     <div class="banner">
-      <span id="title">MomBoard</span>
+      <span id="title">MBoard</span>
       <span id="date">
         <span id="weekday"></span>
         <span id="monthDay">
