--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -91,7 +91,7 @@
   </head>
   <body>
     <header>
-      <h1>MomBoard</h1>
+      <h1>MBoard</h1>
       <a href="../board.html">View board</a>
     </header>
     <div id="formGrid">
