--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="MomBoard.png" />
     <link rel="manifest" href="manifest.json" />
-    <title>MomBoard</title>
+    <title>MBoard</title>
     <style>
       html {
         height: 100%;
